--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@
 #BIQU-B1 Printer
 #  default_envs = LPC1768
 #  default_envs = BIGTREE_SKR_2
+#  default_envs = BIGTREE_SKR_2_F429
 
 [platformio]
 src_dir      = Marlin
