--- a/ini/stm32f4.ini
+++ b/ini/stm32f4.ini
@@ -246,6 +246,26 @@ build_flags       = ${env:BIGTREE_SKR_2_USB.build_flags} -O0
 build_unflags     = ${env:BIGTREE_SKR_2_USB.build_unflags} -Os -NDEBUG
 
 #
+# Bigtreetech SKR V2.0 (STM32F429VGT6 ARM Cortex-M4) with USB Flash Drive Support
+#
+[env:BIGTREE_SKR_2_F429]
+platform             = ${common_stm32.platform}
+platform_packages    = ${stm_flash_drive.platform_packages}
+extends              = common_stm32
+board                = STM32F429VGT6
+board_build.core     = stm32
+board_build.variant  = MARLIN_F429Vx
+board_build.ldscript = ldscript.ld
+board_build.offset   = 0x8000
+board_upload.offset_address = 0x08008000
+extra_scripts     = ${common.extra_scripts}
+  pre:buildroot/share/PlatformIO/scripts/generic_create_variant.py
+  buildroot/share/PlatformIO/scripts/stm32_bootloader.py
+build_flags       = ${stm_flash_drive.build_flags}
+  -DUSE_USBHOST_HS -DUSE_USB_HS_IN_FS -DUSBD_IRQ_PRIO=5 -DUSBD_IRQ_SUBPRIO=6
+  -DHSE_VALUE=8000000U -DHAL_SD_MODULE_ENABLED
+
+#
 # BigTreeTech Octopus V1.0/1.1 / Octopus Pro V1.0 (STM32F446ZET6 ARM Cortex-M4)
 #
 [env:BIGTREE_OCTOPUS_V1]
