--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = STM32G0B1RE_btt
 include_dir  = Marlin
 extra_configs =
     ini/avr.ini
@@ -30,6 +30,7 @@ extra_configs =
     ini/stm32f4.ini
     ini/stm32f7.ini
     ini/stm32h7.ini
+    ini/stm32g0.ini
     ini/teensy.ini
 
 #
